Bug 123647 - FILESAVE XLSX Empty Chart goes missing
Summary: FILESAVE XLSX Empty Chart goes missing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.1.0
Keywords: filter:xlsx, preBibisect, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-02-22 10:05 UTC by NISZ LibreOffice Team
Modified: 2020-09-14 09:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The original file (16.89 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-02-22 10:06 UTC, NISZ LibreOffice Team
Details
The saved file. (15.35 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-02-22 10:06 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc. (179.39 KB, image/png)
2019-02-22 10:06 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-02-22 10:05:42 UTC
Description:
Xlsx empty Chart with a Hyperlink on it goes missing after saving as xlsx in LO.

Steps to Reproduce:
    1. Create a xlsx file in MSO.
    2. Insert→ Chart.
    3. Select the Chart→ Insert→ Hyperlink→ Type/choose the target→ Ok
    4. Save the file.
    5. Open the file in LO, everything is working
    6. Save the file as xlsx and close it.
    7. Open it in LO again.
    8. Notice the Chart is gone.

Actual Results:
The Chart goes missing after saving in LO.

Expected Results:
The Chart should be there with the Hyperlink even after saving it in LO.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-02-22 10:06:14 UTC
Created attachment 149517 [details]
The original file
Comment 2 NISZ LibreOffice Team 2019-02-22 10:06:29 UTC
Created attachment 149518 [details]
The saved file.
Comment 3 NISZ LibreOffice Team 2019-02-22 10:06:58 UTC
Created attachment 149519 [details]
Screenshot of the original document side by side in Excel and Calc.
Comment 4 Durgapriyanka 2019-02-22 18:37:06 UTC
Thank you for reporting the bug. I can confirm the bug present in

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 5 Buovjaga 2019-03-05 19:56:43 UTC
With 3.3.0, the chart area becomes very small, but the selection area remains the same. With 3.5.0, the chart is gone.
Comment 6 Gabor Kelemen (Collabora) 2019-03-14 12:22:43 UTC
This is actually two problems:
- Hyperlink on chart is not exported - that's bug #123645
- Empty chart is not exported

Let's keep this for the empty chart case and change category accordingly.
Comment 7 Commit Notification 2020-08-19 08:33:10 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a8950d08a33e7aded31d4591c98a03d1edf8c5a4

tdf#123647 Chart XLSX export: fix missing empty chart

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2020-09-14 09:49:58 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 34a09c9c61bff30e8c4d16132bb47b2b1b16e422
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded