tdf#123647 Chart XLSX export: fix missing empty chart

Save empty chart as empty bar chart, because a chart without chart type
is invalid.

Change-Id: Ieb9cc4300070b5280565fe814ba0343640dfff0a